[tool.poetry]
name = "Autoembedder"
version = "0.2.3"
description = "PyTorch autoencoder with additional embeddings layer for categorical data."
authors = ["Christopher Lemke <chris@syhbl.mozmail.com>"]
license = "MIT"
readme = "docs/README.md"
homepage = "https://chrislemke.github.io/autoembedder/"
documentation = "https://chrislemke.github.io/autoembedder/"
repository = "https://github.com/chrislemke/autoembedder"
packages = [{ include = "autoembedder", from = "src" }]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
keywords = [
    "autoencoder",
    "embeddings",
    "model",
    "pytorch",
    "neural network",
    "machine learning",
    "data science"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dask = "2022.12.0"
fastparquet = "2022.12.0"
pandas = "1.5.2"
torch = "1.13.1"
torchinfo = "1.7.1"
einops = "^0.6.0"
tqdm = "4.64.1"
tensorboard = "2.11.0"
pytorch-ignite = "^0.4.10"
numpy = "1.24.1"
typer = "^0.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocstrings = {extras = ["python"], version = "0.19.1"}
mkdocs-material = "9.0.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
exclude = ["docs/*"]

[tool.pylint.messages_control]
disable = [
    "C0301",
    "C0114",
    "C0115",
    "C0116",
    "C0103",
    "E0401",
    "E0602",
    "R0801",
    "R0902",
    "R0903",
    "R0913",
    "R0914",
    "R0915",
]

[tool.pylint.format]
max-line-length = 88
